--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <style>
+  .center {
     <title>Portal PONG</title>
     <script src="./javascript/Tone.js"></script>
     <meta charset="UTF-8" />
@@ -50,5 +52,7 @@
     <script type="module" src="./javascript/pong-events.js"></script>
     <script type="module" src="./javascript/pong-util.js"></script>
     <script type="module" src="./javascript/pong-index.js"></script>
+    }
+</style>
 </body>
 </html>
